Fix square videos and spacing

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -559,6 +559,7 @@ footer {
 
   .title {
     font-size: 2.5em;
+    line-height: 1.2;
     margin-bottom: 20px;
   }
 
@@ -577,6 +578,10 @@ footer {
 
     a {
       color: rgb(252, 211, 77);
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
@@ -608,6 +613,7 @@ footer {
     }
   }
   &.style-3 {
+    margin-bottom: 0;
     .row {
       gap: 60px;
     }
